<resources>
    <string name="app_name">RUPizzeria</string>
    <string name="order_list">Order List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="view_menu">View Menu</string>
    <string name="title">Welcome to RUPizzeria!</string>
    <string name="view_menu_desc">View our selection of varying styles of pizzas!</string>
    <string name="shopping_cart_desc">View your current order in the Shopping Cart!</string>
    <string name="first_image">Front Page Image</string>
    <string name="order_list_desc">Keep track of all orders placed, including browsing and canceling orders.</string>
    <string name="menu">Menu</string>
    <string name="style_type">Pizza Style &amp; Type</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="size">Choose A Size:</string>
    <string name="crust">Crust: </string>
    <string name="aTop">Available Toppings</string>
    <string name="sTop">Selected Toppings</string>
    <string name="right"><![CDATA[>>]]></string>
    <string name="left"><![CDATA[<<]]></string>


    <string-array name="itemNames">
        <item>Chicago Style Deluxe</item>
        <item>Chicago Style BBQ Chicken</item>
        <item>Chicago Style Meatzza</item>
        <item>Chicago Style Build Your Own</item>
        <item>NewYork Style Deluxe</item>
        <item>NewYork Style BBQ Chicken</item>
        <item>NewYork Style Meatzza</item>
        <item>NewYork Style Build Your Own</item>
    </string-array>

    <string name="add">Add to Cart</string>
    <string name="price">Price: </string>
    <string name="name1">Name </string>
    <string name="price2">Price </string>
    <string name="cart">Shopping Cart </string>
    <string name="menu2">Verify your selection and Add to cart!</string>

    <string name="removePizza">Remove Pizza</string>
    <string name="addOrder">Place Order</string>
    <string name="subtotal">Subtotal</string>
    <string name="tax">Sales Tax</string>
    <string name="total">Total</string>
    <string name="subtotal1">Subtotal:</string>
    <string name="tax1">Sales Tax:</string>
    <string name="total1">Total:</string>
    <string name="goCart">Go to Cart</string>
    <string name="goMain">Go to Main</string>
    <string name="orderNum">Order Number:</string>
    <string name="orderTotal">Order Total: </string>
    <string name="cancelOrder">Cancel Order</string>

</resources>