<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/first_image"
        android:textColor="#5E0D0D"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="168dp"
        android:layout_height="249dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toStartOf="@+id/listView2"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="145dp"
        android:layout_height="252dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="31dp"
        app:layout_constraintBottom_toTopOf="@+id/addButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editCrust"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="49dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/name1"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/priceText"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="216dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/price2"
        app:layout_constraintBottom_toTopOf="@+id/editCrust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="42dp"
        android:text="@string/price"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toStartOf="@+id/priceText"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="60dp"
        android:text="@string/crust"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/editCrust" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="17dp"
        android:text="@string/aTop"
        app:layout_constraintBottom_toTopOf="@+id/listView"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="19dp"
        android:text="@string/sTop"
        app:layout_constraintBottom_toTopOf="@+id/listView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <RadioGroup
        android:id="@+id/sizeGroup"
        android:layout_width="97dp"
        android:layout_height="145dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12">

        <RadioButton
            android:id="@+id/smallButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/small" />

        <RadioButton
            android:id="@+id/mediumButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/largeButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/large" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/size"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="411dp"
        android:layout_height="44dp"
        android:layout_marginTop="25dp"
        android:background="#d1aa62"
        android:text="@string/menu2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="46dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>